lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:2: error: not found: type Segment
  def getLandingZone():Segment = {
                       ^Lander:24: error: not found: value zone
	if (getX() <= zone(0).x) {return 0}
                      ^Lander:26: error: not found: value zone
		if (getX()>=zone(1).x) {return 2}
                            ^Lander:26: error: type mismatch;
 found   : Unit
 required: Int
		if (getX()>=zone(1).x) {return 2}
                ^Lander:32: error: not found: value setPousseedesiree
  		setPousseedesiree(4) 
                ^Lander:38: error: not found: value setPousseedesiree
setPousseedesiree(4)
^Lander:40: error: not found: value setPousseedesiree
else setPousseedesiree(0)
     ^Lander:44: error: not found: value setPousseedesire
  		setPousseedesire(4)
                ^